--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,17 +23,16 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
       - uses: fregante/setup-git-user@v1
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - run: git config --global user.email "divy.work@outlook.com"
+      - run: git config --global user.name "tgdivy"
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
           rm -r date.txt
           touch date.txt
-          echo "Today's date! ${date}" >> date.txt
+          now=$(date +"%T")
+          echo "Current time : $now" >> date.txt
           git add .
           git commit -m "[date update]"
           git push
